--- a/raft-store/Cargo.toml
+++ b/raft-store/Cargo.toml
@@ -13,9 +13,10 @@ tonic = { workspace = true }
 prost = { workspace = true }
 serde = { version = "1.0.173", features = ["derive"] }
 serde_json = "1.0.103"
-async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
+async-std = { workspace = true }
 async-trait = "0.1.36"
 byteorder = "1.4.3"
+tokio = { workspace = true }
 
 
 [build-dependencies]
@@ -24,3 +25,4 @@ tonic-build = { workspace = true }
 [dev-dependencies]
 tempfile = { version = "3.7.0" }
 tokio = { workspace = true }
+tracing-subscriber = "0.3.17"
