feat: Add OPTICS command line interface
This commit adds the OPTICS command line interface, which allows users to initialize a new cluster or join an existing one. The `init` flag is used to create a new cluster, while the `join` flag is used to specify the address of an existing cluster to join. The `hostname`, `listen_addr`, and `listen_port` flags are used to configure the network settings for the node.

The commit also introduces default values for some of the flags. If no working directory is provided, a temporary directory will be created. Similarly, if no data directory is provided, a temporary directory will be created. If no hostname is provided, the hostname of the current machine will be used.

The commit includes validation logic for the command line arguments and prints any validation errors encountered.

Finally, the commit starts implementing the main functionality of OPTICS by creating an instance of `App` that holds shared state between different components of OPTICS. This includes information about the node's hostname and address, as well as configuration settings for S3 storage.

Co-authored-by: Tongkun Zhang <tongkun.zhang@example.com>

--- a/cdb-mw/Cargo.toml
+++ b/cdb-mw/Cargo.toml
@@ -6,22 +6,25 @@ edition = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [[bin]] # Bin to run the HelloWorld gRPC server
-name = "helloworld-server"
-path = "src/server.rs"
+name = "shell"
+path = "src/shell.rs"
 
-[[bin]] # Bin to run the HelloWorld gRPC client
-name = "helloworld-client"
-path = "src/client.rs"
-
+[[bin]]
+name = "optics"
+path = "src/main.rs"
 
 [dependencies]
 raft-store = { path = "../raft-store" }
 rust-s3 = { workspace = true }
-tokio = { workspace = true }
+tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
 libc = { workspace = true }
 tonic = { workspace = true }
 prost = { workspace = true }
 clap = { workspace = true }
+tempfile = { version = "3.7.0" }
+hostname = { version = "0.3.1" }
+async-std = { workspace = true }
+futures = { version = "0.3.28" }
 
 [build-dependencies]
 tonic-build = { workspace = true }
