--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 members = [
     "raft-store",
-    #    "cdb-mw"
+    "cdb-mw"
 ]
 
 [workspace.dependencies]
@@ -19,5 +19,6 @@ libc = "0.2"
 tonic = "0.9.2"
 prost = "0.11.9"
 clap = { version = "4.3.11", features = ["derive", "env"] }
+async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
 
 tonic-build = "0.9.2"
