--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ tonic = "0.9.2"
 prost = "0.11.9"
 clap = { version = "4.3.11", features = ["derive", "env"] }
 async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
-
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter", "ansi"] }
 tonic-build = "0.9.2"
