--- a/cdb-mw/Cargo.toml
+++ b/cdb-mw/Cargo.toml
@@ -27,6 +27,8 @@ async-std = { workspace = true }
 futures = { version = "0.3.28" }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+tokio-stream = { version = "0.1.14" }
+async-stream = "0.3.5"
 
 [build-dependencies]
 tonic-build = { workspace = true }
